Fixed slideshow image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -624,7 +624,8 @@ nav a:hover
 
 .Slideshow-Image{
 	width: 100%;
-	max-height: 80vh;
+	max-height: 90vh;
+	object-fit: cover;
 }
 
 
